# kaspersky

./: .gitignore  CMakeLists.txt  README.md  README_ru.md
.github/workflows/: ci.yml
src/: CMakeLists.txt
src/client/: client.cpp  client.hpp  main.cpp
src/common/: socket_fd.cpp  socket_fd.hpp
src/server/: main.cpp  scanner.cpp  scanner.hpp  server.cpp  server.hpp  shared_stats.cpp  shared_stats.hpp
tests/: CMakeLists.txt
tests/test_client/data/: clean_file.txt  infected_file.txt
tests/test_server/: scanner_tests.cpp  shared_stats_tests.cpp
tests/test_server/data/: config.txt
